<?xml version="1.0"?>
<package format="2">
  <name>tactile_calibration_tools</name>
  <version>0.1.0</version>
  <description>The tactile_calibration_tools package</description>

  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>

  <license>LGPLv3</license>

  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosbag</depend>
  <depend>rospy</depend>
  <depend>tactile_msgs</depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-yaml</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
