<?xml version="1.0"?>
<package>
  <name>tactile_state_calibrator</name>
  <version>0.1.0</version>
  <description>The tactile_state_calibrator applied a piece-wise linear calibration to a tactile_states</description>
  
  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tactile_msgs</build_depend>
  <build_depend>tactile_filters</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tactile_msgs</run_depend>
  <run_depend>tactile_filters</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
