<?xml version="1.0"?>
<package format="3">
  <name>tactile_state_calibrator</name>
  <version>0.1.0</version>
  <description>The tactile_state_calibrator applied a piece-wise linear calibration to a tactile_states</description>

  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tactile_msgs</depend>
  <depend>tactile_filters</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
